<resources>
    <string name="app_name">Mad Level 4 Task 2</string>
    <string name="title">Welcome</string>
    <string name="subtitle">Instructions: select rock, paper or scissors to play.</string>
    <string name="statistics_text">Your all time statistics</string>
    <string name="win_message">You win!</string>
    <string name="lose_message">You lose!</string>
    <string name="draw_message">Draw</string>
    <string name="player_computer">Computer</string>
    <string name="player">You</string>
    <string name="computer_wins">Computer wins!</string>
    <string name="draw">Draw</string>
    <string name="win_stat">Win:</string>
    <string name="lose_stat">Lose:</string>
    <string name="draw_stat">Draw:</string>
    <string name="paper_option">Paper option</string>
    <string name="rock_option">Rock_option</string>
    <string name="scissors_option">Scissors option</string>
    <string name="action_show_history">See history</string>
    <string name="history_menu_item">Your game history</string>
    <string name="versus">V.S.</string>
    <string name="successfully_deleted_msg">All the games have successfully been deleted!</string>
</resources>